--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -184,7 +184,7 @@
                     </a>
                 </li>
                 <li class="page-item">
-                    <a href="?{% keep_par_paginator page=job_list.num_pages %}" class="page-link">last &raquo;</a>
+                    <a href="?{% keep_par_paginator page=paginator.num_pages %}" class="page-link">last &raquo;</a>
                 </li>
                 {% endif %}
             </ul>
