Add software version tracing

--- a/ui/templates/ui/add_step.html
+++ b/ui/templates/ui/add_step.html
@@ -8,6 +8,10 @@
         <input type="text" class="form-control" id="parameter" name="parameter"/>
     </div>
     <div class="form-group">
+        <label for="version-check">How to retrieve version info:</label>
+        <input type="text" class="form-control" id="version-check" name="version_check"/>
+    </div>
+    <div class="form-group">
         <label for="env-selector">Virtual environment</label>
         <select class="form-control input-xlarge" id="env-selector" name="env">
             <option value="">Specify a virtual environment</option>
