Fix `IndexError: string index out of range` for `version_checks`

--- a/ui/templates/ui/step_atom.html
+++ b/ui/templates/ui/step_atom.html
@@ -17,6 +17,10 @@
     <textarea class="form-control parameter-ac" id="parameter" name="parameter" rows="5" required></textarea>
 </div>
 <div class="form-group">
+    <label class="control-label" for="version_check">How to record version info</label>
+    <textarea class="form-control parameter-ac" id="version_check" name="version_check" rows="1"></textarea>
+</div>
+<div class="form-group">
     <details>
         <summary>
             Having expectations of resources this step takes?
